Added PlotPeakByLogValue algorithm. re #974

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -291,6 +291,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\PlotPeakByLogValue.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\PRConjugateGradientMinimizer.cpp"
 				>
 			</File>
@@ -490,6 +494,10 @@
 			</File>
 			<File
 				RelativePath=".\test\LorentzianTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\PlotPeakByLogValue.h"
 				>
 			</File>
 			<File
