--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -35,7 +35,7 @@ parameterDefinition.directory = ../../../Test/Instrument
 #
 # WARNING: Altering this value will almost certainly break Mantid functionality
 #
-requiredpythonscript.directories = ../PythonAPI/scripts/Crystallography;../PythonAPI/scripts/Disordered Materials;/../PythonAPI/scripts/Engineering;../PythonAPI/scripts/Excitations;../PythonAPI/scripts/Large Scale Structures;../PythonAPI/scripts/Molecular Spectroscopy;\
+requiredpythonscript.directories = ../PythonAPI/scripts/Crystallography;../PythonAPI/scripts/Disordered Materials;../PythonAPI/scripts/Engineering;../PythonAPI/scripts/Excitations;../PythonAPI/scripts/Large Scale Structures;../PythonAPI/scripts/Molecular Spectroscopy;\
 ../PythonAPI/scripts/Muons;../PythonAPI/scripts/Neutrinos;../PythonAPI/scripts/SANS
 
 # Additional directory for Python scripts. This is added to the Python path by the
