--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -16,7 +16,7 @@ supported.facilities = ISIS
 default.facility = ISIS
 
 # A semi-colon separated list of known instruments at the facility given as the last part of the key
-instrument.prefixes.ISIS = ALF;ARGUS;BOUNCE;CRISP;DEVA;EMU;ENGINX;EVS;EXESS;GEM;HERBI;HET;HIFI;HRPD;INES;INTER;IRIS;KARMEN;LAD;LET;LMX;LOQ;MAPS;MARI;MERLIN;MUSR;NESSIE;NIMROD;OFFSPEC;OSIRIS;PEARL;POLARIS;POLREF;PRISMA;RIKEN;ROTAX;SANDALS;SANS2D;SPIRAL;SURF;SXD;TOSCA;VESTA;VESUVIO;WISH;ZOOM
+instrument.prefixes.ISIS = ALF;CSP;ENGINX;EVS;GEM;HET;HRP;INS;IRS;LOQ;MAP;MAR;MER;OSI;PRL;POL;SLS;TSC;LET;NIMROD;OFFSPEC;POLREF;SANS2D;WISH;MUSR
 
 # Set a default instrument
 default.instrument = 
