--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -136,7 +136,7 @@ sed -i -e "s!instrumentDefinition\.directory.*!instrumentDefinition.directory = 
 sed -i -e "s!parameterDefinition\.directory.*!parameterDefinition.directory = %{mantidinstrumentdir}!" $RPM_BUILD_ROOT/%{mantidbindir}/Mantid.properties
 sed -i -e "s!ManagedWorkspace\.FilePath.*!ManagedWorkspace.FilePath = /tmp!" $RPM_BUILD_ROOT/%{mantidbindir}/Mantid.properties
 sed -i -e "s!logging\.channels\.fileChannel\.path.*!logging.channels.fileChannel.path = !" $RPM_BUILD_ROOT/%{mantidbindir}/Mantid.properties
-sed -i -e "s!\.\./\.\./PythonAPI!%{mantiddir}!g" $RPM_BUILD_ROOT/%{mantidbindir}/Mantid.properties
+sed -i -e "s!\.\./PythonAPI!%{mantiddir}!g" $RPM_BUILD_ROOT/%{mantidbindir}/Mantid.properties
 
 %clean
 if test "$RPM_BUILD_ROOT" != "/"; then rm -fr "$RPM_BUILD_ROOT"; fi
