re #1317 -adding ICat project to Sconstruct

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -299,6 +299,7 @@ subProjs.append('Algorithms')
 subProjs.append('DataHandling')
 subProjs.append('Nexus')
 subProjs.append('Crystal')
+subProjs.append('ICat')
 
 for subproj in subProjs:
     ret = SConscript(subproj+'/SConscript')
