--- a/Code/Mantid/ICat/SConscript
+++ b/Code/Mantid/ICat/SConscript
@@ -14,6 +14,8 @@ myenv = env.Clone()
 myenv.Append(CPPDEFINES=[('IN_MANTID_ICAT',1),'WITH_NONAMESPACES','WITH_OPENSSL'])
 listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
 
+myenv.Append(MYLIBLIST='PocoNet')
+
 if platform.system() == "Windows":
     ssl_libs = ['ssleay32','libeay32']
 else:
