Added current SNS instruments. fixes #1326

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -10,13 +10,14 @@
 #          we will never alter your user.properties file so settings there are safe.
 
 # A semi-colon separated list of supported facilities
-supported.facilities = ISIS
+supported.facilities = ISIS;SNS
 
 # Set a default facility
 default.facility = ISIS
 
 # A semi-colon separated list of known instruments at the facility given as the last part of the key
 instrument.prefixes.ISIS = ALF;CSP;ENGINX;EVS;GEM;HET;HRP;INS;IRS;LOQ;MAP;MAR;MER;OSI;PRL;POL;SLS;TSC;LET;NIMROD;OFFSPEC;POLREF;SANS2D;WISH;MUSR
+instrument.prefixes.SNS = BSS;SNAP;REF_M;REF_L;CNCS;EQSANS;VULCAN;PG3;TOPAZ;SEQ;ARCS
 
 # Set a default instrument
 default.instrument = 
