--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -16,7 +16,9 @@ supported.facilities = ISIS;SNS
 default.facility = ISIS
 
 # A semi-colon separated list of known instruments at the facility given as the last part of the key
-instrument.prefixes.ISIS = ALF;CSP;ENGINX;EVS;GEM;HET;HRP;INS;IRS;LOQ;MAP;MAR;MER;OSI;PRL;POL;SLS;TSC;LET;NIMROD;OFFSPEC;POLREF;SANS2D;WISH;MUSR
+instrument.names.ISIS = ARGUS;ALF;CRISP;ENGIN-X;EMU;GEM;HET;HIFI;HRPD;INES;IRIS;LOQ;MAPS;MARI;MERLIN;MUSR;OSIRIS;PEARL;POLARIS;POLREF;PRISMA;SANDALS;SURF;SXD;TOSCA;LET;NIMROD;OFFSPEC;POLREF;SANS2D;VESUVIO;WISH
+instrument.prefixes.ISIS = ARGUS;ALF;CSP;ENGINX;EMU;GEM;HET;HIFI;HRP;INS;IRS;LOQ;MAP;MAR;MER;MUSR;OSI;PRL;POL;POLREF;PRS;SLS;SRF;SXD;TSC;LET;NIMROD;OFFSPEC;POLREF;SANS2D;EVS;WISH
+instrument.names.SNS = BASIS;SNAP;REF_M;REF_L;CNCS;EQSANS;VULCAN;PG3;TOPAZ;SEQOIA;ARCS
 instrument.prefixes.SNS = BSS;SNAP;REF_M;REF_L;CNCS;EQSANS;VULCAN;PG3;TOPAZ;SEQ;ARCS
 
 # Set a default instrument
