--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -495,6 +495,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\SolidAngleCorrection.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\StripPeaks.cpp"
 				>
 			</File>
@@ -1030,6 +1034,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\SolidAngle.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAlgorithms\SolidAngleCorrection.h"
 				>
 			</File>
 			<File
