Fixes #1337: show local time zone in mantid.log file. Kudos to Freddie for the fix.

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -108,6 +108,7 @@ logging.channels.fileChannel.formatter.class = PatternFormatter
 logging.channels.fileChannel.formatter.pattern = %Y-%m-%d %H:%M:%S,%i [%I] %p %s - %t
 logging.formatters.f1.class = PatternFormatter
 logging.formatters.f1.pattern = %s-[%p] %t
-logging.formatters.f1.times = UTC;
+logging.formatters.f1.times = local
+logging.channels.fileChannel.formatter.times = local
 # SignalChannel - Passes messages to the MantidPlot User interface
 logging.channels.signalChannel.class = SignalChannel
