--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -137,7 +137,7 @@ print "NEXUS ROOT:", nexus_path
 
 if os.name == 'nt':
     env.Append(CPPDEFINES = ['_SCL_SECURE_NO_WARNINGS', '_CRT_SECURE_NO_WARNINGS', '_CRT_SECURE_NO_DEPRECATE', '_CRT_NONSTDC_NO_DEPRECATE', '_SCL_SECURE_NO_DEPRECATE'])
-    env.Append(CPPDEFINES = {'MS_VISUAL_STUDIO':'1', 'WINVER':'0x0500'})
+    env.Append(CPPDEFINES = [('MS_VISUAL_STUDIO','1'), ('WINVER','0x0500')])
     env.Append(CPPDEFINES = ['BOOST_ALL_DYN_LINK','NOMINMAX','_USE_MATH_DEFINES', 'WNT'])
     env.Append(CPPDEFINES = ['WIN32', '_WINDOWS', 'POCO_DLL', 'GSL_DLL'])
     if int(debug) :
