Add critical section to cow_ptr::access method to prevent original vector being lost when sharing is broken. Appears to have no noticeable impact on speed. Re #1353.

--- a/Code/Mantid/CurveFitting/.project
+++ b/Code/Mantid/CurveFitting/.project
@@ -5,6 +5,7 @@
 	<projects>
 		<project>API</project>
 		<project>DataObjects</project>
+		<project>Geometry</project>
 		<project>Kernel</project>
 	</projects>
 	<buildSpec>
