Added errors to the parameters output. re #1200

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -405,6 +405,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\FitMultispectralTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\test\FitTest.h"
 				>
 			</File>
