--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -305,6 +305,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\LoadSpice2D.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ManagedRawFileWorkspace2D.cpp"
 				>
 			</File>
@@ -584,6 +588,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidDataHandling\LoadSPE.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidDataHandling\LoadSpice2D.h"
 				>
 			</File>
 			<File
