re #1317 - Some improvements over ICat prototype code. Added new class MaskedProperty to mask some of the properties of ICat algorithms Added ICat download directory to Build/Tests/Mantid.Properties file

--- a/Code/Mantid/ICat/ICat.vcproj
+++ b/Code/Mantid/ICat/ICat.vcproj
@@ -191,6 +191,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\GetDataSets.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\GetInvestigation.cpp"
 				>
 			</File>
