--- a/Code/Mantid/ICat/ICat.vcproj
+++ b/Code/Mantid/ICat/ICat.vcproj
@@ -191,11 +191,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\src\GetDataSets.cpp"
+				RelativePath=".\src\GetDataFiles.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\src\GetInvestigation.cpp"
+				RelativePath=".\src\GetDataSets.cpp"
 				>
 			</File>
 			<File
@@ -236,6 +236,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\inc\MantidICat\GetDataFiles.h"
+				>
+			</File>
 			<Filter
 				Name="MantidIcat"
 				>
@@ -245,10 +249,6 @@
 				</File>
 				<File
 					RelativePath=".\inc\MantidICat\FileList.h"
-					>
-				</File>
-				<File
-					RelativePath=".\inc\MantidICat\GetInvestigation.h"
 					>
 				</File>
 				<File
