Extended EventList to support calculation of Gaussian errors. Changed cache usage to not recalculate cached data if it was still valid, also separated calculation of Y cache from E cache, as E will be requested less often.
All of this was done to allow the addition of tests in DivideTest which required errors. 
re #1367, re #1357

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -589,7 +589,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\CheckWorkspacesMatchTest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\CloneWorkspace.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\CloneWorkspaceTest.h"
 				>
 			</File>
 			<File
@@ -618,6 +626,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\ConvertSpectrumAxis.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\ConvertSpectrumAxisTest.h"
 				>
 			</File>
 			<File
@@ -698,6 +710,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAlgorithms\DiffractionFocussing2.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\DiffractionFocussing2Test.h"
 				>
 			</File>
 			<File
