Fix for compiling on Windows. Re #1317.

--- a/Code/Mantid/ICat/ICat.vcproj
+++ b/Code/Mantid/ICat/ICat.vcproj
@@ -41,7 +41,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="inc;../../Third_Party/include/muParser;../DataObjects/inc;../API/inc;../../Third_Party/include;../Kernel/inc;../Geometry/inc;inc;../DataObjects/inc;../API/inc;../../Third_Party/include;../Kernel/inc;../Geometry/inc;../../Third_party/Include"
-				PreprocessorDefinitions="WINDOWS;_USRDLL;ICAT_EXPORTS;WITH_OPENSSL;WITH_NONAMESPACES; IN_MANTID_ICAT=1"
+				PreprocessorDefinitions="WINDOWS;POCO_DLL;_USRDLL;ICAT_EXPORTS;WITH_OPENSSL;WITH_NONAMESPACES; IN_MANTID_ICAT=1"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
