--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -226,7 +226,7 @@ print "CFLAGS: ",cflags
 conf = Configure(env)
 if conf.CheckCXXHeader('unordered_map.h'):
 	conf.env.Append(CPPDEFINES = ['HAS_UNORDERED_MAP_H'])
-if not conf.CheckCXXHeader('Poco/Notification.h'):
+if not conf.CheckCXXHeader('Notification.h') and not conf.CheckCXXHeader('Poco/Notification.h'):
     print "Failed to find 'Poco/Notification.h'"
     Exit(-1)
 if not conf.CheckCXXHeader('muParser.h') and not conf.CheckCXXHeader('muParser/muParser.h'):
