--- a/Code/Mantid/DataObjects/DataObjects.vcproj
+++ b/Code/Mantid/DataObjects/DataObjects.vcproj
@@ -177,6 +177,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\AbsManagedWorkspace2D.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\CompressedWorkspace2D.cpp"
 				>
 			</File>
