Limited calculation of peaks to the area close to the peak centre. The size of the area (in FWHMs) is defined by CurveFitting.PeakRadius property. re #1377

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -259,6 +259,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\IPeakFunction.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ITableWorkspace.cpp"
 				>
 			</File>
