Activate other warnings that are not covered by -Wall on gcc, this in particular flags unused variables. Removed a couple of prevalent ones that are included everywhere. Lots more though. Re #100

--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -208,6 +208,7 @@ if os.name == 'posix':
 	conf.Finish()
 
 	cflags.append('-Wall')
+	cflags.append('-Wextra')
 	# Debug symbols are useful in release too
 	cflags.append('-g')
 	lpts.append('-g')
