re #1416 - adjusting solution/project files for Windows build in response to revision 5349

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -315,6 +315,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Run.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Sample.cpp"
 				>
 			</File>
@@ -616,6 +620,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAPI\RefAxis.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\Run.h"
 				>
 			</File>
 			<File
