Included the archive search service into finding files. re #1393

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -58,6 +58,9 @@ pythonalgorithms.directories = ../PythonAPI/PythonAlgorithms
 # Use forward slash / for all paths
 datasearch.directories = 
 
+# Setting this to On enables searching the facilitie's archive automatically
+datasearch.searcharchive = Off
+
 # A default directory to use for saving files
 # Use forward slash / for all paths
 defaultsave.directory = 
