re #1317 - Some improvements to ICat algorithms

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -65,6 +65,9 @@ datasearch.searcharchive = Off
 # Use forward slash / for all paths
 defaultsave.directory = 
 
+# ICat downlaod directory
+icatDownload.directory = ../../../Test/Data/ICatDownload
+
 # The Number of algorithms properties to retain im memory for refence in scripts.
 algorithms.retained = 50
 
