--- a/Code/Mantid/ICat/ICat.vcproj
+++ b/Code/Mantid/ICat/ICat.vcproj
@@ -199,7 +199,15 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ListInstruments.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Login.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\Logout.cpp"
 				>
 			</File>
 			<File
@@ -236,10 +244,6 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\inc\MantidICat\GetDataFiles.h"
-				>
-			</File>
 			<Filter
 				Name="MantidIcat"
 				>
@@ -248,7 +252,19 @@
 					>
 				</File>
 				<File
+					RelativePath=".\inc\MantidICat\ErrorHandling.h"
+					>
+				</File>
+				<File
 					RelativePath=".\inc\MantidICat\FileList.h"
+					>
+				</File>
+				<File
+					RelativePath=".\inc\MantidICat\GetDataFiles.h"
+					>
+				</File>
+				<File
+					RelativePath=".\inc\MantidICat\GetDataSets.h"
 					>
 				</File>
 				<File
@@ -256,7 +272,15 @@
 					>
 				</File>
 				<File
+					RelativePath=".\inc\MantidICat\ListInstruments.h"
+					>
+				</File>
+				<File
 					RelativePath=".\inc\MantidICat\Login.h"
+					>
+				</File>
+				<File
+					RelativePath=".\inc\MantidICat\Logout.h"
 					>
 				</File>
 				<File
@@ -312,6 +336,14 @@
 			</File>
 			<File
 				RelativePath=".\test\FileListTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\GetDataFilesTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\ListInstrumentsTest.h"
 				>
 			</File>
 			<File
