Setting the peak calculation range from .properties file and preferences in Mantidplot. re #1436

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -86,6 +86,10 @@ ManagedWorkspace.DataBlockSize = 4000
 ManagedWorkspace.FilePath = ../temp
 CompressedWorkspace.DoNotUse = 1
 
+# Defines the area (in FWHM) on both sides of the peak centre within which peaks are calculated. 
+# Outside this area peak functions return zero.
+curvefitting.peakRadius = 5
+
 
 #Uncommenting the line below will enable algorithm chain re-running whenever a
 #workspace is replaced. Uncommenting and setting it to 0 will also turn it off 
