Moved Mantid Qt plugins to a separate directory under the MantidInstall/plugins directory to harmonize plugins locations with the installed Qt plugins. Created a new property in Mantid.properties to control this. Updated mac installer as well. Re #1438

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -27,6 +27,9 @@ default.instrument =
 # Where to find mantid plugin libraries
 plugins.directory = .
 
+# Where to find Mantid Qt plugin libraries
+mantidqt.plugins.directory = .
+
 # Where to load instrument definition files from
 instrumentDefinition.directory = ../../../Test/Instrument
 
